fixes weird column width alignment

--- a/static/css/styles.less
+++ b/static/css/styles.less
@@ -95,15 +95,15 @@ body { padding-top: 40px; }
         .label { font-size: 8px; font-weight: normal; padding: 0 4px; text-transform: uppercase; }
     }
     .col-publish { width: 70px; text-align: center;
-        .btn-mini { width: 40px; font-size: 9px; padding: 0 6px; line-height: 15px; }
+        .btn-mini { width: 40px; font-size: 9px; padding: 0 6px; line-height: 17px; }
     }
 
-    .col-building { width: 250px; }
+    .col-building { }
     .col-type { width:  250px; }
     .col-floor { width: 250px; }
     .col-orientation { width: 300px; }
     .col-notes { width: 300px;
-        span { width: 300px; overflow: hidden; display: block; text-overflow: ellipsis; }
+        span { width: 200px; overflow: hidden; display: block; text-overflow: ellipsis; }
     }
 
     /*.col-building { width: 10%; }
